# boolean-network-sketches

./: .gitignore  Cargo.toml  LICENSE  README.md  create_attractor_formula.py  run_all_experiments.py  run_all_experiments.sh  run_case_study_1.sh  run_case_study_2.sh  run_scalability_benchmarks.sh
.githooks/: README.txt  pre-commit
.github/workflows/: build.yml
benchmark_models/: 133_full_param.aeon  annotated_tlgl.aeon  output-all-experiments.txt
benchmark_models/001_321v/: results.txt
benchmark_models/110_9v/: 110_parametrized.aeon  attractor_states.txt.txt  model_parametrized.aeon
benchmark_models/114_84v/: model_parametrized.aeon  results.txt
benchmark_models/115_35v/: model_parametrized.aeon  results.txt
benchmark_models/118_121v/: model_concrete.aeon  model_parametrized.aeon  model_parametrized_1.aeon  results.txt  steady_states.txt
benchmark_models/123_60v/: model_concrete.aeon  results.txt
benchmark_models/124_252v/: attractor_states.txt  model_parametrized.aeon  results.txt
benchmark_models/133_9v/: steady_states.txt
benchmark_models/CNS_development/: metadata.txt  model.aeon
benchmark_models/Case_study_TLGL/: README.md  TLGL_reduced_partial_updates.aeon  TLGL_reduced_unknown_updates.aeon  candidates_summarized.txt  results_v2.txt
benchmark_models/Case_study_arabidopsis/: README.md  arabidopsis.aeon  candidates_summarized.txt  results_fixed_points.txt  summary.txt
benchmark_models/TLGL_reduced/: TLGL_reduced_partial_updates.aeon  candidates_summarize.txt  results_new.txt
benchmark_models/case_study_TLGL/: attractor_data.txt  results_v1.txt
benchmark_models/case_study_arabidopsis/: results_complex_properties.txt  results_fixed_points.txt
benchmark_models/cav2022/: 1.aeon  1.bnet  2.bnet  2_summary.txt  3.aeon  3.bnet  3_summary.txt  6.bnet  6_summary.txt
benchmark_models/cav2022/all_tested/: 020_parametrized.aeon  020_parametrized.bnet  020_parametrized.txt  069_parametrized.aeon  115_params.aeon  126_params.aeon  126_params.bnet  126_params.txt  cool_model_108.aeon  cool_model_114.aeon  cool_model_128.aeon  cool_model_132.aeon  tacas1_upgraded.aeon  tacas1_upgraded.bnet  tacas1_upgraded.txt  tacas1_upgraded_v2.aeon  tacas1_upgraded_v2.bnet  tacas1_upgraded_v2.txt  tacas3_upgraded.txt
benchmark_models/celldivb_9v/: metadata.txt  results.txt
benchmark_models/eprotein_35v/: metadata.txt  results.txt
benchmark_models/etc_84v/: metadata.txt  model_concrete.aeon  results.txt
benchmark_models/griffin/: griffin_model2.aeon
benchmark_models/griffin-models/: README.md  griffin_model1.aeon
benchmark_models/griffin_1/: README.md
benchmark_models/griffin_2/: candidates_summarize.txt
benchmark_models/inference-benchmarks/001_321v/: steady_states.txt
benchmark_models/inference-benchmarks/114_84v/: model_fixed.aeon  (+2 more)
benchmark_models/interferon1_121v/: metadata.txt  results.txt
benchmark_models/macrophage_321v/: metadata.txt  model_concrete.aeon  model_parametrized.aeon  results.txt
benchmark_models/nsp4_60v/: metadata.txt  model_parametrized.aeon  results.txt
benchmark_models/nsp9_252v/: metadata.txt  model_parametrized.aeon  results.txt
benchmark_models/pystablemotifs/: 2161_Guard_Cell_Abscisic_Acid_Signaling.bnet  2171_T_Cell_Receptor_Signaling.bnet  EMT.bnet  TLGL_Large.bnet  cell_cycle_2016.aeon  myeloid.aeon  myeloid.bnet
benchmark_models/pystablemotifs-models/: 2171_T_Cell_Receptor_Signaling.aeon  2176_T-LGL_Survival_Network_2008.bnet  2691_T-Cell_Signaling_2006.bnet  README.md  TLGL_Large.aeon  cell_cycle_2016.bnet
benchmark_models/small-example/: formulae.txt  model-small-example.aeon
benchmark_models/small_example/: formulae.txt  resulting-BN.aeon  results-output.txt
benchmark_models/tacas2022/: tacas1.aeon  tacas2.aeon  tacas2_extended.aeon  tacas3.aeon  tacas4.aeon  tacas5.aeon
src/: attractor_inference.rs  create_inference_formulae.rs  gradual_inference_aeon.rs  inference_attractor_data.rs  lib.rs  main.rs  utils.rs
src/data_processing/: create_inference_formulae.rs  data_encoding.rs  data_loading.rs  mod.rs  observations.rs
src/hctl_with_holes/: mod.rs  reachability_one_hole.rs  reachability_two_holes.rs  utils.rs
(+30 files in other folders)
