[package]
name = "boolean-network-sketches"
version = "0.1.0"
authors = ["Ondřej Huvar <xhuvar@fi.muni.cz>", "Samuel Pastva <sam.pastva@gmail.com>"]
edition = "2021"
description = "Framework for Boolean network inference using BN sketches."
homepage = "https://github.com/sybila/boolean-network-sketches"
repository = "https://github.com/sybila/boolean-network-sketches"
readme = "README.md"
keywords = ["inference", "boolean-network", "model-checking", "symbolic", "systems-biology"]
categories = ["science", "simulation"]
license = "MIT"
exclude = ["benchmark_models", ".github", ".githooks"]
rust-version = "1.64"

#[profile.release]
#lto = true

[profile.test]
opt-level = 3

[[bin]]
name = "sketches-inference"
path = "src/main.rs"

[[bin]]
name = "inference-with-attractors"
path = "src/bin/bn_inference_with_attractors.rs"

[[bin]]
name = "case-study-tlgl"
path = "src/bin/case_study_tlgl.rs"

[[bin]]
name = "case-study-arabidopsis"
path = "src/bin/case_study_arabidopsis.rs"

[[bin]]
name = "small-example"
path = "src/bin/small_example.rs"

[dependencies]
biodivine-lib-bdd = ">=0.5.1, <1.0.0"
biodivine-lib-param-bn = ">=0.4.5, <1.0.0"
biodivine-hctl-model-checker = ">=0.1.5, <1.0.0"
clap = { version = "4.1.4", features = ["derive"] }
termcolor = "1.1.2"
rand = "0.8.5"
